[tg-bot_december_10] "feedback" component was changed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,7 +47,7 @@ hr {
     align-items: center;
 }
 
-.fotm-control {
+.form-control {
     width: 100%;
     height: 60px;
     background: var(--tg-theme-secondary-bg-color);
